Attempt to fix flipInX bug on iOS

--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -67,7 +67,9 @@
         margin: 10px;
         position: relative;
         display: inline-block;
-
+        -webkit-backface-visibility: hidden; // needed to get flipInX to work in iOS
+        -webkit-transform: translate3d(0,0,0); // needed to get flipInX to work in iOS
+        
         .text {
           position: absolute;
           top: 0;
@@ -92,6 +94,8 @@
         img {
           height: $instagram-image-size;
           width: $instagram-image-size;
+          -webkit-backface-visibility: hidden; // needed to get flipInX to work in iOS
+          -webkit-transform: translate3d(0,0,0); // needed to get flipInX to work in iOS
         }
       }
     }
