--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -145,7 +145,9 @@ a {
   #home #life #pictures a {
     margin: 10px;
     position: relative;
-    display: inline-block; }
+    display: inline-block;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0); }
     #home #life #pictures a .text {
       position: absolute;
       top: 0;
@@ -165,7 +167,9 @@ a {
       opacity: 1; }
     #home #life #pictures a img {
       height: 200px;
-      width: 200px; }
+      width: 200px;
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translate3d(0, 0, 0); }
 #home #aboutme {
   padding-bottom: 0; }
   #home #aboutme #wrapper {
